--- a/src/components/FormAddContact/FormAddContact.module.css
+++ b/src/components/FormAddContact/FormAddContact.module.css
@@ -8,7 +8,6 @@
 .input {
   width: 100%;
   padding: 10px 20px;
-  margin-bottom: 20px;
 
   background-color: transparent;
   border: 1px solid var(--border-color);
@@ -19,10 +18,19 @@
   width: 50%;
   height: 40px;
   margin: 0 auto;
+  margin-top: 20px;
 
   font-size: 18px;
   background-color: transparent;
   border: 1px solid var(--border-color);
   border-radius: 4px;
   cursor: pointer;
+
+  transform: scale(1);
+  transition: transform 200ms linear;
+}
+
+.btn:hover,
+.btn:focus {
+  transform: scale(1.05);
 }
