--- a/src/components/FormAddContact/FormAddContact.module.css
+++ b/src/components/FormAddContact/FormAddContact.module.css
@@ -8,6 +8,7 @@
 .input {
   width: 100%;
   padding: 10px 20px;
+  margin-bottom: 10px;
 
   background-color: transparent;
   border: 1px solid var(--border-color);
