--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -32,3 +32,21 @@
 .contactName {
   margin-right: 10px;
 }
+
+.btnDelete {
+  margin-left: auto;
+
+  border-radius: 4px;
+  border: 1px solid currentColor;
+  color: var(--border-color);
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 200ms linear, color 200ms linear;
+}
+
+.btnDelete:hover,
+.btnDelete:focus {
+  color: var(--warning-color);
+  border-color: currentColor;
+  transform: scale(1.1);
+}
