--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,5 +1,6 @@
 .contactItem {
   display: flex;
+  align-items: center;
   width: 70%;
   padding: 5px 10px;
   margin: 0 auto;
@@ -20,6 +21,8 @@
 }
 
 .icon {
+  width: 20px;
+  height: 20px;
   margin-right: 10px;
   color: var(--border-color);
 }
